--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/todo_app
+MONGODB_URI=mongodb://localhost:27017/todo_app
 NODE_ENV=development
 SESSION_SECRET=todo-app-secret-key
 LOG_LEVEL=debug
