created login and register section

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ MONGODB_URI=mongodb://localhost:27017/todo_app
 NODE_ENV=development
 SESSION_SECRET=todo-app-secret-key
 LOG_LEVEL=debug
+JWT_ACCESS_SECRET=access-secret-key-very-secure
+JWT_REFRESH_SECRET=refresh-secret-key-very-secure
+JWT_ACCESS_EXPIRY=15m
+JWT_REFRESH_EXPIRY=7d
