--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format": "prettier --write \"src/**/*.{js,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,json,md}\"",
     "validate": "npm run lint && npm run format:check"
-    
   },
   "keywords": [
     "todo",
@@ -26,13 +25,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.3",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "winston": "^3.17.0"
